Name:           ghcjs-rts
Version:        0.1.0.0
Synopsis:       JavaScript run time system for GHC
Description:    This library will install the .js run time system files needed to run the JavaScript created by GHCJS
License:        BSD3
License-file:   LICENSE
Author:         Victor Nazarov
Copyright:      Victor Nazarov
Maintainer:     Hamish Mackenzie <hamish.k.mackenzie@google.com>
Homepage:       https://github.com/hamishmack/ghcjs-rts
Stability:      Experimental
Build-Type:     Custom
Cabal-Version:  >= 1.6


Library
    Build-Depends:   base
    Exposed-Modules: GHCJS
